# local-pypi.template

./: Makefile  README.md  collect-dists.py
demo_package/: Dockerfile  Makefile  README.md  pyproject.toml
demo_package/demo_package/: __init__.py
